src (Cópia)/conditionparser/conditionparser.output
Gramática

    0 $accept: input $end

    1 input: expr-or-null

    2 expr-or-null: expr
    3             | ε

    4 expr: '(' expr-no-pt ')'
    5     | expr-no-pt
    6     | '(' name-no-pt ')'
    7     | name-no-pt

    8 expr-no-pt: expr-and
    9           | expr-or

   10 expr-and: expr KEY_AND_1 expr

   11 expr-or: expr KEY_OR_1 expr

   12 name-no-pt: STRNAME1


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '(' (40) 4 6
    ')' (41) 4 6
    error (256)
    STRNAME1 <sval> (258) 12
    KEY_AND_1 <sval> (259) 10
    KEY_OR_1 <sval> (260) 11


Não terminais com as regras onde eles aparecem

    $accept (8)
        à esquerda: 0
    input <condition> (9)
        à esquerda: 1
        à direita: 0
    expr-or-null <condition> (10)
        à esquerda: 2 3
        à direita: 1
    expr <condition> (11)
        à esquerda: 4 5 6 7
        à direita: 2 10 11
    expr-no-pt <condition> (12)
        à esquerda: 8 9
        à direita: 4 5
    expr-and <condition> (13)
        à esquerda: 10
        à direita: 8
    expr-or <condition> (14)
        à esquerda: 11
        à direita: 9
    name-no-pt <condition> (15)
        à esquerda: 12
        à direita: 6 7


Estado 0

    0 $accept: • input $end

    STRNAME1  deslocar, e ir ao estado 1
    '('       deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 3 (expr-or-null)

    input         ir ao estado 3
    expr-or-null  ir ao estado 4
    expr          ir ao estado 5
    expr-no-pt    ir ao estado 6
    expr-and      ir ao estado 7
    expr-or       ir ao estado 8
    name-no-pt    ir ao estado 9


Estado 1

   12 name-no-pt: STRNAME1 •

    $padrão  reduzir usando a regra 12 (name-no-pt)


Estado 2

    4 expr: '(' • expr-no-pt ')'
    6     | '(' • name-no-pt ')'

    STRNAME1  deslocar, e ir ao estado 1
    '('       deslocar, e ir ao estado 2

    expr        ir ao estado 10
    expr-no-pt  ir ao estado 11
    expr-and    ir ao estado 7
    expr-or     ir ao estado 8
    name-no-pt  ir ao estado 12


Estado 3

    0 $accept: input • $end

    $end  deslocar, e ir ao estado 13


Estado 4

    1 input: expr-or-null •

    $padrão  reduzir usando a regra 1 (input)


Estado 5

    2 expr-or-null: expr •
   10 expr-and: expr • KEY_AND_1 expr
   11 expr-or: expr • KEY_OR_1 expr

    KEY_AND_1  deslocar, e ir ao estado 14
    KEY_OR_1   deslocar, e ir ao estado 15

    $padrão  reduzir usando a regra 2 (expr-or-null)


Estado 6

    5 expr: expr-no-pt •

    $padrão  reduzir usando a regra 5 (expr)


Estado 7

    8 expr-no-pt: expr-and •

    $padrão  reduzir usando a regra 8 (expr-no-pt)


Estado 8

    9 expr-no-pt: expr-or •

    $padrão  reduzir usando a regra 9 (expr-no-pt)


Estado 9

    7 expr: name-no-pt •

    $padrão  reduzir usando a regra 7 (expr)


Estado 10

   10 expr-and: expr • KEY_AND_1 expr
   11 expr-or: expr • KEY_OR_1 expr

    KEY_AND_1  deslocar, e ir ao estado 14
    KEY_OR_1   deslocar, e ir ao estado 15


Estado 11

    4 expr: '(' expr-no-pt • ')'
    5     | expr-no-pt •

    ')'  deslocar, e ir ao estado 16

    $padrão  reduzir usando a regra 5 (expr)


Estado 12

    6 expr: '(' name-no-pt • ')'
    7     | name-no-pt •

    ')'  deslocar, e ir ao estado 17

    $padrão  reduzir usando a regra 7 (expr)


Estado 13

    0 $accept: input $end •

    $padrão  aceitar


Estado 14

   10 expr-and: expr KEY_AND_1 • expr

    STRNAME1  deslocar, e ir ao estado 1
    '('       deslocar, e ir ao estado 2

    expr        ir ao estado 18
    expr-no-pt  ir ao estado 6
    expr-and    ir ao estado 7
    expr-or     ir ao estado 8
    name-no-pt  ir ao estado 9


Estado 15

   11 expr-or: expr KEY_OR_1 • expr

    STRNAME1  deslocar, e ir ao estado 1
    '('       deslocar, e ir ao estado 2

    expr        ir ao estado 19
    expr-no-pt  ir ao estado 6
    expr-and    ir ao estado 7
    expr-or     ir ao estado 8
    name-no-pt  ir ao estado 9


Estado 16

    4 expr: '(' expr-no-pt ')' •

    $padrão  reduzir usando a regra 4 (expr)


Estado 17

    6 expr: '(' name-no-pt ')' •

    $padrão  reduzir usando a regra 6 (expr)


Estado 18

   10 expr-and: expr • KEY_AND_1 expr
   10         | expr KEY_AND_1 expr •
   11 expr-or: expr • KEY_OR_1 expr

    KEY_OR_1  deslocar, e ir ao estado 15

    $padrão  reduzir usando a regra 10 (expr-and)


Estado 19

   10 expr-and: expr • KEY_AND_1 expr
   11 expr-or: expr • KEY_OR_1 expr
   11        | expr KEY_OR_1 expr •

    $padrão  reduzir usando a regra 11 (expr-or)
